---
source: crates/pcb-zen/tests/input.rs
assertion_line: 68
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
  )
)
Error: Input 'pwr' is required but was not provided
   ╭─[ [TEMP_DIR]my_sub.zen:3:1 ]
   │
 3 │ pwr = io(Net)
   │ ─┬─  
   │  ╰─── Input 'pwr' is required but was not provided
   │
   ├─[ [TEMP_DIR]top.zen:4:1 ]
   │
 4 │ ╭─▶ Sub(
   ┆ ┆   
 7 │ ├─▶ )
   │ │       
   │ ╰─────── Error instantiating `my_sub`
───╯
